--- a/map generator/map generator.csproj
+++ b/map generator/map generator.csproj
@@ -78,7 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\MapGeneratorWall.cs" />
+    <Compile Include="Assets\GenerateMap.cs" />
     <Compile Include="Assets\Room.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
