--- a/map generator/map generator.csproj
+++ b/map generator/map generator.csproj
@@ -78,8 +78,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\GenerateMap.cs" />
-    <Compile Include="Assets\Room.cs" />
+    <Compile Include="Assets\MapModelGenerator.cs" />
+    <Compile Include="Assets\ModelDoor.cs" />
+    <Compile Include="Assets\ModelPath.cs" />
+    <Compile Include="Assets\ModelRoom.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
